--- a/Drizzle ORM/views/partials/header.ejs
+++ b/Drizzle ORM/views/partials/header.ejs
@@ -10,7 +10,7 @@
     <!-- Navbar -->
     <nav class="navbar">
       <ul class="navbar-links">
-        <li><a href="/">Home</a></li>
+        <li><a href="/shorten">Home</a></li>
         <li><a href="#section2">About</a></li>
         <li><a href="#section4">Contact</a></li>
 
