--- a/Drizzle ORM/views/auth/register.ejs
+++ b/Drizzle ORM/views/auth/register.ejs
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -13,7 +14,7 @@
     />
 
     <!-- Main css -->
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <%- include('../partials/header') %>
@@ -62,18 +63,8 @@
                   />
                 </div>
 
-                <!-- <div class="form-group">
-                  <input
-                    type="checkbox"
-                    name="agree-term"
-                    id="agree-term"
-                    class="agree-term"
-                  />
-                  <label for="agree-term" class="label-agree-term"
-                    ><span><span></span></span>I agree all statements in
-                    <a href="#" class="term-service">Terms of service</a></label
-                  >
-                </div> -->
+            
+
                 <div class="form-group form-button">
                   <input
                     type="submit"
@@ -87,7 +78,7 @@
             </div>
             <div class="signup-image">
               <figure>
-                <img src="/images/signup-image.jpg" alt="sing up image" />
+                <img src="images/signup-image.jpg" alt="sing up image" />
               </figure>
               <a href="/login" class="signup-image-link">I am already member</a>
             </div>
