--- a/Drizzle ORM/views/partials/header.ejs
+++ b/Drizzle ORM/views/partials/header.ejs
@@ -15,7 +15,7 @@
     <header>
       <div class="container">
         <div class="logo">
-          <a href="/"><h1>URL Shortener</h1></a>
+          <a href="/shorten"><h1>URL Shortener</h1></a>
         </div>
 
         <nav class="navbar">
