Connect Users with Short Links & Show Only Their Links After Login

--- a/Drizzle ORM/views/index.ejs
+++ b/Drizzle ORM/views/index.ejs
@@ -22,7 +22,7 @@
           <div class="shortener-content">
             <div class="shortener-form">
               <h1 class="form-title">URL Shortener</h1>
-              <form action="/" method="post" class="url-form" id="url-form">
+              <form action="/shorten" method="post" class="url-form" id="url-form">
                 <div class="form-group">
                   <label for="url">
                     <i class="zmdi zmdi-link"></i>
