--- a/Drizzle ORM/views/auth/register.ejs
+++ b/Drizzle ORM/views/auth/register.ejs
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -63,7 +62,10 @@
                   />
                 </div>
 
-            
+                <% if(errors && errors.length > 0) { %> <%
+                errors.forEach((error) => { %>
+                <p class="flash-error"><%= error %></p>
+                <% }) %> <% } %>
 
                 <div class="form-group form-button">
                   <input
