created a dynamic profile page

--- a/Drizzle ORM/views/partials/header.ejs
+++ b/Drizzle ORM/views/partials/header.ejs
@@ -27,6 +27,8 @@
           <a href="/login">Login</a>
           <a href="/register">Register</a>
           <% } else { %>
+          <a href="/profile">profile</a>
+
           <a href="/logout">Logout</a>
           <% } %>
         </nav>
